--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-      <title>Webcam parkinson detection</title>
-    </head>
-    <body>
-      <h1>Video Streaming Demonstration</h1>
-      <img id="bg" src="{{ url_for('video_feed') }}">
-      <!-- <button>Start Parkinson's disease detection</button> -->
-
-    </body>
-  </html>
+  <head>
+    <title>Webcam parkinson detection</title>
+  </head>
+  <body>
+    <h1>Video Streaming Demonstration</h1>
+    <img id="bg" src="{{ url_for('video_feed') }}" />
+    <!-- <button>Start Parkinson's disease detection</button> -->
+  </body>
+</html>
